# AquaUI

./: .gitignore  CMakeLists.txt  README.md
src/: aquaui.h  core.cpp  core.h  gui.cpp  gui.h  main.cpp  xmlTest.xml
src/Widgets/: Button.cpp  Button.h  Frame.cpp  Frame.h  Label.cpp  Label.h  TextInput.cpp  TextInput.h  button.cpp  button.h  lable.cpp  lable.h  textinput.cpp  textinput.h
src/core/: XMLBuilder.cpp  XMLBuilder.h  core.cpp  core.h  xmlBuilder.cpp  xmlBuilder.h
src/xmlCompiler/: CMakeLists.txt  compiler.cpp
